Adding utility classes

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
     />
   </head>
   <body>
-    <h1>Quem canta</h1>
-    <h2>Quem canta</h2>
-    <h3>Quem canta</h3>
-
-    <ul>
-      <li>list</li>
-    </ul>
+    <header>
+      <div class="container even-columns">
+        <h1>Lado a</h1>
+        <h1>Lado b</h1>
+      </div>
+    </header>
   </body>
 </html>
-  
