--- a/index.html
+++ b/index.html
@@ -178,11 +178,7 @@
               <h3>Premium</h3>
               <p>Ideal para quem já cansou de passar vergonha no Karaokê</p>
               <zin-pricing>R$ 24,90<small>/mês</small></zin-pricing>
-              <a
-                href="#download"
-                class="btn btn-md"
-                aria-label="Experimente de graça"
-              ></a>
+              <a href="#download" class="btn btn-md">Experimente de graça</a>
               <div class="separator"></div>
               <ul role="list" class="grid gap-1">
                 <li>Sem interrupção de anúncios</li>
